[gd_scene load_steps=20 format=3 uid="uid://dpxg1l4onan1b"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemies/Slime.gd" id="1_k610l"]
[ext_resource type="Texture2D" uid="uid://cqp7ifc7g2dg4" path="res://ART/PARTICLES/slime.png" id="2_d1gcj"]
[ext_resource type="Texture2D" uid="uid://clkwr5a1r08nb" path="res://ART/EFFECTS/generic shadow.png" id="3_2wrjr"]
[ext_resource type="Texture2D" uid="uid://bt1ujsk0t78hp" path="res://ART/CHARACTERS/ENEMIES/Slime-sheet.png" id="4_qa6gg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3hxr"]
radius = 7.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5gpd"]
size = Vector2(17, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdd1y"]
size = Vector2(17, 14)

[sub_resource type="Gradient" id="Gradient_1480w"]
colors = PackedColorArray(1, 1, 1, 0.823529, 1, 1, 1, 0.4)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jcxv0"]
gradient = SubResource("Gradient_1480w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_22tox"]
lifetime_randomness = 0.07
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 90.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 60.0
damping_max = 80.0
angle_min = -25.0
angle_max = 25.0
scale_min = 0.2
scale_max = 0.5
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("GradientTexture1D_jcxv0")

[sub_resource type="Gradient" id="Gradient_jgcbj"]
colors = PackedColorArray(1, 1, 1, 0.733333, 1, 1, 1, 0.333333)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iyp2q"]
gradient = SubResource("Gradient_jgcbj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x8mi7"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 14.47
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 116.56
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 50.0
damping_max = 70.0
angle_min = -90.0
angle_max = 90.0
scale_min = 0.4
scale_max = 0.8
color_ramp = SubResource("GradientTexture1D_iyp2q")

[sub_resource type="CircleShape2D" id="CircleShape2D_ld274"]
radius = 166.46

[sub_resource type="Animation" id="Animation_rtnic"]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Death:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"sprite_flash"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Collisions:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SlimeSprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.151844, 0.0]
}

[sub_resource type="Animation" id="Animation_cigcq"]
resource_name = "jump"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"jump"
}, {
"args": [],
"method": &"stop_jump"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_jump")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LandParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.2, 1.2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 2, 0, 1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -9), Vector2(0, -14), Vector2(0, -9), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Collisions:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -7), Vector2(0, -14), Vector2(0, -7), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Hurtbox:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -7), Vector2(0, -14), Vector2(0, -7), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_c55j1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.151844]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collisions:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_exshs"]
resource_name = "knockback"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.151844, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"sprite_flash"
}, {
"args": [],
"method": &"end_damage_period"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipeqk"]
_data = {
"RESET": SubResource("Animation_c55j1"),
"die": SubResource("Animation_rtnic"),
"jump": SubResource("Animation_cigcq"),
"knockback": SubResource("Animation_exshs")
}

[node name="Slime" type="CharacterBody2D"]
rotation = -0.151844
collision_layer = 2
collision_mask = 39
platform_floor_layers = 4294901760
script = ExtResource("1_k610l")

[node name="Collisions" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e3hxr")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 128
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_k5gpd")
disabled = true
debug_color = Color(0.694118, 0.494118, 0.145098, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_tdd1y")
disabled = true
debug_color = Color(0.952941, 0.0235294, 0.541176, 0.419608)

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.698039)
position = Vector2(0, 1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_2wrjr")

[node name="LandParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 6)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_22tox")
texture = ExtResource("2_d1gcj")
lifetime = 2.0
one_shot = true
explosiveness = 0.88
randomness = 0.45

[node name="Death" type="GPUParticles2D" parent="."]
position = Vector2(0, 1)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_x8mi7")
texture = ExtResource("2_d1gcj")
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0

[node name="SlimeSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.635294)
position = Vector2(-1, -9)
texture = ExtResource("4_qa6gg")
hframes = 7
frame = 1

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ld274")
debug_color = Color(0.898039, 0.2, 0.603922, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ipeqk")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
